compiler/tests/liva/errors/e0004_circular_type_alias.liva
// Error Test: E0004 — Circular type alias
// EXPECT: E0004
type Node = Node

main() {
    print("unreachable")
}
